Configuration set for Sensor1 and 16 line lidar getCorners() currently working but not entirely. Not able to click on image to draw polygon

--- a/conf/lidar_camera_calibration.yaml
+++ b/conf/lidar_camera_calibration.yaml
@@ -1,5 +1,8 @@
 ﻿lidar_camera_calibration:
-  camera_frame_topic: /frontNear/left/image_raw
-  camera_info_topic: /frontNear/left/camera_info
+  #camera_frame_topic: /ximea_cam/image_raw
+  #camera_info_topic: /ximea_cam/xi_image_info
+  camera_frame_topic: /ximea_ros_cam/image_raw
+  camera_info_topic: /ximea_ros_cam/XiImageInfo
   velodyne_topic: /velodyne_points
+
 
